[package]
name = "pump-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.17"
solana-program = "1.17"
solana-client = "1.17"
yellowstone-grpc-client = "1.13.0"
yellowstone-grpc-proto = "1.13.0"
tonic = "0.10"
spl-token = "4.0"
spl-associated-token-account = "2.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bs58 = "0.5.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.12"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "sniper"
path = "src/bin/sniper.rs"
